cluster-components/stage/harbor-ingress/manifests.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ui
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/auth-url: https://auth.sigmacloud.app/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://auth.sigmacloud.app/oauth2/start?rd=$scheme://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      if ($request_method = OPTIONS) {
        return 200;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harbor.sigmacloud.app
      secretName: harbor.sigmacloud.app-cert
  rules:
    - host: harbor.sigmacloud.app
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 80
          - path: /service/
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 80
          - path: /chartrepo/
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 80
          - path: /c/
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-portal
                port:
                  number: 80
